@@ -1,3 +1,7 @@
+* Fri Nov 16 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.1.2-0
+- Update to remove potentially redundant test code and use the updated
+  simp-beaker-helpers
+
 * Thu Nov 15 2018 Mark Leary  <leary.mark@gmail.com> - 8.1.1-0
 - Revert back to using the native service provider for the auditd service since
   puppet fixed the service handling.
